Added Rich Text Editor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,5 @@ dependencies {
 
     implementation implementation(project(':dash_border'))
     implementation implementation(project(':tooltip'))
+    implementation implementation(project(':rt_editor'))
 }
