--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_version     = '1.1.0'
+        compose_version     = '1.2.0-alpha04'
         koin_version        = '3.1.5'
         nav_version         = '2.4.1'
         accompanist_version = '0.24.2-alpha'
