--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
+    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.0'
+
+    implementation "dev.olshevski.navigation:reimagined:1.0.0"
 
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
@@ -64,7 +67,10 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
 
+    implementation "com.google.firebase:firebase-firestore:$firebase_version"
+
+    implementation "com.github.pChochura:richtext-compose:$richtext_version"
+
     implementation implementation(project(':dash_border'))
     implementation implementation(project(':tooltip'))
-    implementation implementation(project(':rt_editor'))
 }
