--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 buildscript {
     ext {
-        compose_version     = '1.1.1'
+        compose_version     = '1.2.0-alpha05'
         koin_version        = '3.1.5'
         nav_version         = '2.4.1'
-        accompanist_version = '0.24.2-alpha'
+        accompanist_version = '0.24.3-alpha'
+        firebase_version    = '24.0.2'
+        richtext_version    = '1.1.2'
     }
 
     repositories {
