--- a/dash_border/build.gradle
+++ b/dash_border/build.gradle
@@ -27,6 +27,6 @@ android {
 
 dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.compose.foundation:foundation:1.2.0-alpha03'
+    implementation "androidx.compose.foundation:foundation:$compose_version"
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 }
