--- a/tooltip/build.gradle
+++ b/tooltip/build.gradle
@@ -27,8 +27,8 @@ android {
 
 dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.compose.foundation:foundation:1.2.0-alpha03'
+    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    implementation 'androidx.compose.material:material:1.1.0'
     implementation 'androidx.core:core:1.7.0'
 }
