--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,11 @@
+import io.gitlab.arturbosch.detekt.Detekt
+import io.gitlab.arturbosch.detekt.DetektCreateBaselineTask
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    id 'io.gitlab.arturbosch.detekt' version "1.20.0-RC1"
 }
 
 android {
@@ -19,6 +23,15 @@ android {
         }
     }
 
+    detekt {
+        debug = true
+        buildUponDefaultConfig = true
+        ignoreFailures = true
+        config = files("$rootDir/config/detekt.yml")
+        dependencies {
+            detektPlugins("io.gitlab.arturbosch.detekt:detekt-formatting:$detekt_version")
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -73,4 +86,11 @@ dependencies {
 
     implementation implementation(project(':dash_border'))
     implementation implementation(project(':tooltip'))
+}
+
+tasks.withType(Detekt).configureEach {
+    jvmTarget = "1.8"
+}
+tasks.withType(DetektCreateBaselineTask).configureEach {
+    jvmTarget = "1.8"
 }
