--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,18 @@
-import io.gitlab.arturbosch.detekt.Detekt
-import io.gitlab.arturbosch.detekt.DetektCreateBaselineTask
-
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
-    id 'io.gitlab.arturbosch.detekt' version "1.20.0-RC1"
+    id 'io.gitlab.arturbosch.detekt'
+    id 'com.google.gms.google-services'
 }
 
 android {
-    compileSdk 32
+    compileSdk compileAndTargetSdk
 
     defaultConfig {
         applicationId "com.pointlessapps.amnesia"
-        minSdk 21
-        targetSdk 32
+        minSdk minSdk
+        targetSdk compileAndTargetSdk
         versionCode 1
         versionName "0.1"
 
@@ -43,7 +41,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
     buildFeatures {
         compose true
@@ -63,9 +61,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.0'
 
-    implementation "dev.olshevski.navigation:reimagined:1.0.0"
+    implementation "dev.olshevski.navigation:reimagined:$nav_version"
 
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
@@ -76,21 +73,14 @@ dependencies {
     implementation "io.insert-koin:koin-android-compat:$koin_version"
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
 
-    implementation "androidx.navigation:navigation-compose:$nav_version"
-
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
-
-    implementation "com.google.firebase:firebase-firestore:$firebase_version"
 
     implementation "com.github.pChochura:richtext-compose:$richtext_version"
 
-    implementation implementation(project(':dash_border'))
-    implementation implementation(project(':tooltip'))
-}
-
-tasks.withType(Detekt).configureEach {
-    jvmTarget = "1.8"
-}
-tasks.withType(DetektCreateBaselineTask).configureEach {
-    jvmTarget = "1.8"
+    implementation(project(':dash_border'))
+    implementation(project(':tooltip'))
+    implementation(project(':domain'))
+    implementation(project(':errors'))
+    implementation(project(':datasource'))
+    implementation(project(':firebase_datasource'))
 }
