--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,32 @@
+import io.gitlab.arturbosch.detekt.Detekt
+import io.gitlab.arturbosch.detekt.DetektCreateBaselineTask
+
 buildscript {
     ext {
-        compose_version     = '1.2.0-alpha05'
-        koin_version        = '3.1.5'
-        nav_version         = '2.4.1'
+        compileAndTargetSdk = 32
+        minSdk = 24
+        compose_version = '1.2.0-alpha05'
+        koin_version = '3.1.5'
+        nav_version = '1.0.0'
         accompanist_version = '0.24.3-alpha'
-        firebase_version    = '24.0.2'
-        richtext_version    = '1.1.2'
-        detekt_version      = '1.20.0-RC1'
-    }
-
-    repositories {
-        mavenCentral()
+        firebase_version = '29.2.0'
+        richtext_version = '1.1.3'
+        detekt_version = '1.20.0-RC1'
+        coroutines_version = '1.6.0'
     }
 }
 
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
+    id 'com.google.gms.google-services' version '4.3.10' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'io.gitlab.arturbosch.detekt' version "1.20.0-RC1"
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+tasks.withType(Detekt).configureEach { jvmTarget = "1.8" }
+tasks.withType(DetektCreateBaselineTask).configureEach { jvmTarget = "1.8" }
