--- a/tooltip/build.gradle
+++ b/tooltip/build.gradle
@@ -4,18 +4,18 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk compileAndTargetSdk
 
     defaultConfig {
-        minSdk 21
-        targetSdk 32
+        minSdk minSdk
+        targetSdk compileAndTargetSdk
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
     buildFeatures {
         compose true
@@ -30,5 +30,5 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    implementation 'androidx.core:core:1.7.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
 }
