--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 }
 
 android {
-    compileSdk compileAndTargetSdk
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.pointlessapps.amnesia"
-        minSdk minSdk
-        targetSdk compileAndTargetSdk
+        minSdk 24
+        targetSdk 32
         versionCode 1
         versionName "0.1"
 
