--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,12 @@ import io.gitlab.arturbosch.detekt.DetektCreateBaselineTask
 
 buildscript {
     ext {
-        compileAndTargetSdk = 32
-        minSdk = 24
         compose_version = '1.2.0-alpha05'
         koin_version = '3.1.5'
         nav_version = '1.0.0'
         accompanist_version = '0.24.3-alpha'
         firebase_version = '29.2.0'
+        gms_version = '20.1.0'
         richtext_version = '1.1.3'
         detekt_version = '1.20.0-RC1'
         coroutines_version = '1.6.0'
