Added Google sign in

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-    implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.0'
+    implementation "androidx.activity:activity-compose:$androix_version"
 
     implementation "dev.olshevski.navigation:reimagined:$nav_version"
 
@@ -76,6 +76,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
 
     implementation "com.github.pChochura:richtext-compose:$richtext_version"
+
+    implementation "com.google.android.gms:play-services-auth:$gms_version"
 
     implementation(project(':dash_border'))
     implementation(project(':tooltip'))
