--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         compose_version = '1.2.0-alpha05'
         koin_version = '3.1.5'
         nav_version = '1.0.0'
+        androix_version = '1.4.0'
         accompanist_version = '0.24.3-alpha'
         firebase_version = '29.2.0'
         gms_version = '20.1.0'
