--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,13 +67,12 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.foundation:foundation:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-android-compat:$koin_version"
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
-
-    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
 
     implementation "com.github.pChochura:richtext-compose:$richtext_version"
 
