--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,19 @@ android {
         }
     }
 
+    signingConfigs {
+        release {
+            Properties properties = new Properties()
+            File propertiesFile = new File('keystore.properties')
+            propertiesFile.withInputStream { properties.load(it) }
+
+            storeFile file(properties.storeFile)
+            storePassword properties.storePassword
+            keyAlias properties.keyAlias
+            keyPassword properties.keyPassword
+        }
+    }
+
     detekt {
         debug = true
         buildUponDefaultConfig = true
@@ -34,6 +47,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
