--- a/datasource/build.gradle
+++ b/datasource/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 24
-        targetSdk 32
+        targetSdk 33
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -17,6 +17,7 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+    namespace 'com.pointlessapps.amnesia.datasource'
 }
 
 dependencies {
