--- a/build.gradle
+++ b/build.gradle
@@ -3,27 +3,28 @@ import io.gitlab.arturbosch.detekt.DetektCreateBaselineTask
 
 buildscript {
     ext {
-        compose_version = '1.2.0-alpha08'
-        koin_version = '3.1.5'
-        nav_version = '1.1.0'
-        androix_version = '1.4.0'
-        firebase_version = '29.2.0'
-        gms_version = '20.1.0'
+        compose_version = '1.4.7'
+        compose_bom_version = '2023.04.01'
+        koin_version = '3.4.0'
+        nav_version = '1.4.0'
+        androix_version = '1.7.1'
+        firebase_version = '32.0.0'
+        gms_version = '20.5.0'
         richtext_version = '1.2.0'
         detekt_version = '1.20.0-RC1'
-        coroutines_version = '1.6.0'
+        coroutines_version = '1.7.0'
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.1.2' apply false
-    id 'com.android.library' version '7.1.2' apply false
-    id 'com.google.gms.google-services' version '4.3.10' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
-    id 'io.gitlab.arturbosch.detekt' version "1.20.0-RC1"
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
+    id 'com.google.gms.google-services' version '4.3.15' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.21' apply false
+    id 'io.gitlab.arturbosch.detekt' version "1.23.0-RC3"
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
 
