--- a/dash_border/build.gradle
+++ b/dash_border/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 24
-        targetSdk 32
+        targetSdk 33
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -23,10 +23,12 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
     }
+    namespace 'com.pointlessapps.dash_border'
 }
 
 dependencies {
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation platform("androidx.compose:compose-bom:$compose_bom_version")
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.foundation:foundation"
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 }
